add new baseline

--- a/moviechat/templates/moviechat/index.html
+++ b/moviechat/templates/moviechat/index.html
@@ -18,6 +18,7 @@
     <!--#3 Javascript Files-->
     <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/botui/build/botui.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{% static 'moviechat/js/chatbot.js' %}" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
