--- a/moviechat/templates/moviechat/index.html
+++ b/moviechat/templates/moviechat/index.html
@@ -9,9 +9,18 @@
     <!--#1 CSS Files-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/botui/build/botui.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/botui/build/botui-theme-default.css" />
+    <link rel="stylesheet" href="{% static 'moviechat/css/custom.css' %}" />
   </head>
   <body>
     <!--#2 BotUI Tag-->
+    <header>
+     <h1>HollyBot
+     <img class="logo"  src="{% static 'moviechat/img/movie.png' %}" />
+     </h1>  
+     <p>Chat as if you're in a movie! 
+     Warning: HollyBot has a mind of her own...
+     </p>
+    </header>
     <div class="botui-app-container" id="hello-world">
       <bot-ui></bot-ui>
     </div>
