--- a/moviechat/templates/moviechat/index.html
+++ b/moviechat/templates/moviechat/index.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <!--#2 BotUI Tag-->
-    <header>
+    <div class="header">
      <h1>HollyBot
      <img class="logo"  src="{% static 'moviechat/img/movie.png' %}" />
      </h1>  
      <p>Chat as if you're in a movie! 
      Warning: HollyBot has a mind of her own...
      </p>
-    </header>
+    </div>
     <div class="botui-app-container" id="hello-world">
       <bot-ui></bot-ui>
     </div>
